# GuacaMolEval

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml
src/guacamoleval/: __init__.py  create_figures.ipynb  eval.py  eval.sh  experiment.sh  experiments.sh  helpers.py
